trunk/Archive2/87/754529fc7bf208/output
main.cpp:21:24: error: expected ';' after expression
    std::vector<int>(5) vc;
                       ^
                       ;
main.cpp:21:25: error: use of undeclared identifier 'vc'
    std::vector<int>(5) vc;
                        ^
main.cpp:23:10: error: expected expression
    for ()
         ^
main.cpp:23:10: error: expected ';' in 'for' statement specifier
main.cpp:26:18: error: use of undeclared identifier 'vc'
    std::cout << vc << std::endl;
                 ^
5 errors generated.
